Change in functionalty and structure of appointment for doctors and add some new endpoints
