# src/models/Session.ts
@@ -1,8 +1,15 @@
 import mongoose, { Schema } from 'mongoose'
 import { SessionStatus, SessionTypes } from '../enums'
 import { ISessionModel } from '../interfaces';
+import { ApiError, BAD_REQUEST } from '../utils';
 
 const sessionSchema = new Schema({
+    appointmentId: {
+        type: Schema.Types.ObjectId,
+        ref: 'Appointment',
+        required: false,
+        index: true
+    },
     doctorId: {
         type: Schema.Types.ObjectId,
         ref: 'User',
@@ -48,12 +55,40 @@ const sessionSchema = new Schema({
         enum: Object.values(SessionStatus),
         defauld: SessionStatus.PENDING,
         index: true
-    }
+    },
+    title: {
+        type: String,
+    },
+    description: {
+        type: String,
+    },
+    tags: [
+        {
+            type: Schema.Types.ObjectId,
+            ref: 'Tag',
+            required: true,
+        }
+    ]
 }, {
     timestamps: true,
     versionKey: false,
     toObject: { virtuals: true },
     toJSON: { virtuals: true } 
+})
+
+sessionSchema.pre('save', async function(next) {
+    if(this.type === SessionTypes.PRIVATE) {
+        this.title = 'Private Session'
+        this.description = 'Private Session'
+        this.tags = []
+    } else {
+        if (!this.title) {
+            throw new ApiError('العنوان مطلوب', BAD_REQUEST)
+        }
+        this.description = this.description || 'Public Session'
+        this.tags = this.tags || []
+    }
+    next()
 })
 
 sessionSchema.virtual('doctorData', {
@@ -62,7 +97,10 @@ sessionSchema.virtual('doctorData', {
     foreignField: '_id',
     justOne: true,
     options: { 
-        select: 'name avatar _id' 
+        // select: 'name avatar email _id',
+        populate: {
+            path: 'doctorData',
+        }
     }
 });
 sessionSchema.virtual('participationsData', {
@@ -71,7 +109,7 @@ sessionSchema.virtual('participationsData', {
     foreignField: '_id',
     justOne: false,
     options: { 
-        select: 'name avatar _id' 
+        select: 'name avatar email_id',
     }
 });
 
