# src/validation/session.validation.ts
@@ -4,15 +4,18 @@ import { SessionStatus, SessionTypes } from "../enums";
 
 export const createPrivateSessionSchema = z.object({
     appointmentId: z.string().regex(MongoDBObjectId, 'مَعرف الموعد غير صحيح'),
-    startAt: z.coerce.date(),
+    startAtIndex: z.number().int().min(0),
     meetLink: z.string()                //! Add Regex for meet service url
 })
 
 export const createCommunitySessionSchema = z.object({
-    startAt: z.coerce.date(),
+    startAt: z.coerce.date().min(new Date(), 'يجب أن يكون الوقت البدء أكبر من الوقت الحالي'),
     duration: z.number().int().positive(),
     seats: z.number().positive().int(),
-    meetLink: z.string()
+    meetLink: z.string(),
+    title: z.string(),
+    description: z.string().optional(),
+    tags: z.array(z.string().regex(MongoDBObjectId, 'مَعرف التصنيف غير صحيح')).optional(),
 })
 
 export const confirmPrivateSessionSchema = z.object({
@@ -24,4 +27,7 @@ export const getAllSessionsSchema = z.object({
     userId: z.string().regex(MongoDBObjectId, "مَعرف الدكتور غير صحيح").optional(),
     type: z.nativeEnum(SessionTypes).optional(),
     status: z.nativeEnum(SessionStatus).optional(),
+    title: z.string().optional(),
+    description: z.string().optional(),
+    tags: z.array(z.string().regex(MongoDBObjectId, 'مَعرف التصنيف غير صحيح')).optional(),
 })
